--- a/sveltekit/src/app/app.css
+++ b/sveltekit/src/app/app.css
@@ -15,58 +15,55 @@
 
 	--radius: 1.3rem;
 
-	--bg-100: #ffffff;
-	--bg-1000: #f9f9f9;
+	--bg-white: #ffffff;
+	--bg-gray: #f5f5f5;
 
-	--whisper-100: #f8f8f8;
-	--whisper-150: #ededed;
+	--whisper-100: #ebebeb;
+	--whisper-150: #e0e0e0;
 	--whisper-200: #d6d6d6;
 	--whisper-300: #c2c2c2;
-	--whisper-400: #e5e5e5;
 	--whisper-500: #999999;
-	--whisper-700: #6e6e6e;
-	--whisper-800: #ffffff;
-	--whisper-900: #ffffff;
+	--whisper-700: #5e5e5e;
 	--whisper-950: #141414;
 
 	--rapture-50: #fff7f5;
-	--rapture-100: #fee5dc;
-	--rapture-150: #f7d2cb;
-	--rapture-200: #ffbfa8;
-	--rapture-300: #fba6a9;
-	--rapture-400: #f88e68;
-	--rapture-500: #ff7e51;
+	--rapture-100: #ffe5dc;
+	--rapture-150: #ffd7cb;
+	--rapture-200: #ffbda8;
+	--rapture-300: #f8a489;
+	--rapture-400: #fb8e6b;
+	--rapture-500: #fe7b51;
 	--rapture-600: #d36441;
-	--rapture-700: #a9472d;
-	--rapture-800: #703720;
+	--rapture-700: #9a472d;
+	--rapture-800: #7d3720;
 	--rapture-900: #522110;
-	--rapture-950: #3d150b;
+	--rapture-950: #3d1508;
 
-	--mindaro-50: #faff9f;
-	--mindaro-100: #e6ffaf;
-	--mindaro-150: #f6ffcf;
-	--mindaro-200: #e6f9b5;
-	--mindaro-300: #dbf9b5;
-	--mindaro-400: #c4f2a9;
-	--mindaro-500: #a5d8aa;
-	--mindaro-600: #8bad7a;
-	--mindaro-700: #5b6737;
-	--mindaro-800: #545f2d;
+	--mindaro-50: #fafff0;
+	--mindaro-100: #f6ffcf;
+	--mindaro-150: #ecffb4;
+	--mindaro-200: #e7ff85;
+	--mindaro-300: #d8fb5b;
+	--mindaro-400: #c4f229;
+	--mindaro-500: #a5d80a;
+	--mindaro-600: #6da104;
+	--mindaro-700: #587807;
+	--mindaro-800: #54670d;
 	--mindaro-900: #415710;
 	--mindaro-950: #213102;
 
 	--chimera-50: #f4f7ff;
-	--chimera-100: #e3e7ff;
-	--chimera-150: #e4e7ff;
-	--chimera-200: #d1dcff;
-	--chimera-300: #bfdfff;
-	--chimera-400: #99bbff;
-	--chimera-500: #7a99fe;
-	--chimera-600: #6294f0;
-	--chimera-700: #4c5c9a;
-	--chimera-800: #38669e;
+	--chimera-100: #e5ecff;
+	--chimera-150: #d1dcff;
+	--chimera-200: #c1d0ff;
+	--chimera-300: #99b2ff;
+	--chimera-400: #5982fe;
+	--chimera-500: #2f63fe;
+	--chimera-600: #2247b9;
+	--chimera-700: #1c3c9a;
+	--chimera-800: #132869;
 	--chimera-900: #091537;
-	--chimera-950: #0d0b1e;
+	--chimera-950: #050b1e;
 }
 
 * {
