feat: Inputs + Icons

--- a/sveltekit/src/app/app.css
+++ b/sveltekit/src/app/app.css
@@ -18,6 +18,9 @@
 	--bg-white: #ffffff;
 	--bg-gray: #f5f5f5;
 
+	--bg-danger: #feebeb;
+	--danger: #f23b3b;
+
 	--whisper-100: #ebebeb;
 	--whisper-150: #e0e0e0;
 	--whisper-200: #d6d6d6;
